--- a/reducetotalproductcount/MyCustomView.xib
+++ b/reducetotalproductcount/MyCustomView.xib
@@ -18,7 +18,7 @@
                 <rect key="frame" x="0.0" y="0.0" width="400" height="168"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="0608afa3-02cc-4ccd-ae5a-660ae345bac4 " id="Qri-5j-t9H" userLabel="0608afa3-02cc-4ccd-ae5a-660ae345bac4">
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Image 5" id="Qri-5j-t9H" userLabel="0608afa3-02cc-4ccd-ae5a-660ae345bac4">
                         <rect key="frame" x="0.0" y="0.0" width="118" height="113"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </imageView>
@@ -83,7 +83,7 @@
         </collectionViewCell>
     </objects>
     <resources>
-        <image name="0608afa3-02cc-4ccd-ae5a-660ae345bac4 " width="1728" height="2160"/>
+        <image name="Image 5" width="600" height="600"/>
         <systemColor name="opaqueSeparatorColor">
             <color red="0.77647058820000003" green="0.77647058820000003" blue="0.7843137255" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
