--- a/reducetotalproductcount/Base.lproj/Main.storyboard
+++ b/reducetotalproductcount/Base.lproj/Main.storyboard
@@ -41,6 +41,13 @@
                                     </collectionViewCell>
                                 </cells>
                             </collectionView>
+                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="WX7-LI-pbE">
+                                <rect key="frame" x="0.0" y="852" width="414" height="44"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
+                                <items>
+                                    <barButtonItem title="Item" id="Qid-jf-xaP"/>
+                                </items>
+                            </toolbar>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -48,6 +55,7 @@
                     <navigationItem key="navigationItem" id="81b-95-odo"/>
                     <connections>
                         <outlet property="kollektion" destination="gTy-Ot-2St" id="dgx-1I-ysP"/>
+                        <outlet property="toolbarItem" destination="Qid-jf-xaP" id="H9x-4Q-N46"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
